--- a/about-programming.html
+++ b/about-programming.html
@@ -5,7 +5,7 @@
 	<title></title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css">
 	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="learning-method.css">
+	<link rel="stylesheet" href="about-programming.css">
 </head>
 <body id="learning-method">
 	<main class="swiper-container">
@@ -13,73 +13,57 @@
 			<section class="swiper-slide text-only">
 				<h1>
 					Hello Programing!<br>
-					ゼロからはじめるプログラミング学習
+					これから学ぶことについて知ってみよう
 				</h1>
 				<p>
-					プログラミング未経験の方が、<br>
-					プログラミングスキルを身に付けていくためには、どのような方法があるでしょうか？<br>
+					実際に学習サービスを使って学習をはじめる前に、<br>
+					これから学ぶことについて、かんたんに知ってみましょう。<br>
 					<br>
-					現代的な学習方法をまとめましたので、<br>
-					ご自身にぴったり合った方法で、学習を始めましょう！<br>
-				</p>
-			</section>
-
-			<section class="swiper-slide text-only">
-				<h2>サークル主催者の紹介</h2>
-				<p>
-					2018年12月頃、<br>
-					サークル主催者はプログラミング学習をはじめました。<br>
-					<br>
-					当初は、一切プログラミングに触れたこともありませんでしたが、<br>
-					偶然、プログラミングを教えてくれる友人と出会い、それをきっかけに、学習をはじめました。<br>
-					<br>
-					2019年7月頃、<br>
-					ある程度のスキルを身につけた主催者は、エンジニアとして転職しました。<br>
-					<br>
-					楽しんで習得を続ければ、同じように短期間で、十分なスキルを身につけることができます。<br>
-					主催者が相談にのりますので、是非一緒に楽しく学習をはじめてみましょう！
+					これから説明することの中で、意味がよくわからない文章や単語、<br>
+					また気になる事などがあった時は、なるべくGoogleで検索したり、質問したりして、<br>
+					頭をスッキリさせてから進めるようにしてみてください！
 				</p>
 			</section>
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">学習方法</h2>
+					<h2 class="title">プログラミング言語って？</h2>
 					<div class="text">
-						プログラミングの学習方法にはどんなものがあるでしょうか？<br>
-						主となる６つの方法がこちらになります。
+						プログラミングというのは、文字のデータを使ってPCにやらせたい事を書いていく作業になります。<br>
+						文字のデータっていうのは、単なるテキストファイルのことです。<br>
+						Windows標準の「メモ帳」アプリで作れるようなやつです。<br>
+						<br>
+						それを日本語じゃなく、これから学習する書き方で書いていく。<br>
+						これが、プログラミングです。<br>
+						<br>
+						これから書くものは、日本語ではないので、プログラミング言語と呼ばれます。<br>
+						今後、言語という言葉がでてきたら、プログラミング言語のことを言っていると思ってください。
 					</div>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<p class="title">1. 高額プログラミングスクール</p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/School ©Wokandapix from Pixabay.jpg">
-						<p class="copyRight">©Wokandapix from Pixabay</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/C.png">
 					</div>
 					<div class="content">
-						<p class="title">2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/Company ©janeb13 from Pixabay.jpg">
-						<p class="copyRight">©janeb13 from Pixabay</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Java.png">
 					</div>
 					<div class="content">
-						<p class="title">3. WEB学習サービス</p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/WEB Service ©StockSnap from Pixabay.jpg">
-						<p class="copyRight">©StockSnap from Pixabay</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/php.png">
 					</div>
 					<div class="content">
-						<p class="title">4. コミュニティ</p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/Community ©StockSnap from Pixabay.jpg">
-						<p class="copyRight">©StockSnap from Pixabay</p>
-					</div>
-
-					<div class="content">
-						<p class="title">5. メンター</p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg">
-						<p class="copyRight">©Nicholas Jackson from Pixabay</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Ruby.png">
 					</div>
 					<div class="content">
-						<p class="title">6. ブログ・まとめサイト</p>
-						<img src="https://h40831.github.io/Hello-Programming/image/種類/Blog ©rawpixel from Pixabay.jpg">
-						<p class="copyRight">©rawpixel from Pixabay</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Python.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/go.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Swift.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Kotlin.png">
 					</div>
 				</div>
 			</section>
