--- a/about-programming.html
+++ b/about-programming.html
@@ -29,15 +29,11 @@
 				<div class="top">
 					<h2 class="title">プログラミング言語って？</h2>
 					<div class="text">
-						プログラミングというのは、文字のデータを使ってPCにやらせたい事を書いていく作業になります。<br>
-						文字のデータっていうのは、単なるテキストファイルのことです。<br>
-						Windows標準の「メモ帳」アプリで作れるようなやつです。<br>
-						<br>
-						それを日本語じゃなく、これから学習する書き方で書いていく。<br>
-						これが、プログラミングです。<br>
-						<br>
-						これから書くものは、日本語ではないので、プログラミング言語と呼ばれます。<br>
-						今後、言語という言葉がでてきたら、プログラミング言語のことを言っていると思ってください。
+						プログラミングは、文字のデータ（＝テキストファイル）を使って<br>
+						プログラムに実行させたい命令を書いていく作業になります。<br>
+						実行させる命令は、日本語じゃなく、これから学習する書き方で書いていくことになりますが<br>
+						この書き方のことを、プログラミング言語と呼びます。<br>
+						今後「言語」という言葉がでてきたら、プログラミング言語のことを言っていると考えてください。
 					</div>
 				</div>
 				<div class="bottom">
@@ -70,331 +66,94 @@
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">1. 高額プログラミングスクール</h2>
+					<h2 class="title">これから学ぶ言語</h2>
 					<p class="text">
-						高額プログラミングスクールの特徴は、その安心感です。<br>
-						プログラミングへの関わりが全くない方も入学しやすい事はメリットですが、<br>
-						カリキュラムや教育制度に対して、学費が高い印象があります。<br>
-						例として下のようなスクールがあります。  ※学費は2019年9月調べ
-					</p>
-				</div>
-				<div class="bottom">
-					<a class="content" href="https://codecamp.jp/" target="_blank">
-						<h3 class="title">CodeCamp</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/code camp.png">
-						<p class="text">
-							マスターコース  2ヶ月  ¥148,000<br>
-							プレミアムコース  2ヶ月  ¥248,000<br>
-							プレミアムプラスコース  2ヶ月  ¥398,000
-						</p>	
-					</a>
-					<a class="content" href="https://camp.potepan.com/" target="_blank">
-						<h3 class="title">POTEPAN CAMP</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/potepan camp.png">
-						<p class="text">
-							オープンコース  2ヶ月 ¥100,000<br>
-							キャリアコース  3ヶ月 ¥250,000<br>
-							ビギナーコース  4ヶ月 ¥300,000
-						</p>	
-					</a>
-
-					<a class="content" href="https://www.sejuku.net/" target="_blank">
-						<h3 class="title">侍エンジニア塾</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/samurai.png">
-						<p class="text">
-							デビューコース  1ヶ月 ¥168,000<br>
-					        フリーランスコース  3ヶ月 ¥438,000<br>
-					        ビジネスコース  6ヶ月 ¥698,000
-						</p>	
-					</a>
-					<a class="content" href="https://tech-camp.in/" target="_blank">
-						<h3 class="title">TECH::CAMP</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/tech camp.png">
-						<p class="text">
-							TECH::CAMP  1ヶ月 ¥14,800 + 入会費 ¥148,000<br>
-							TECH::EXPERT (夜間・休日スタイル)  6ヶ月 ¥798,000<br>
-							TECH::EXPERT (短期集中スタイル)  10週間 ¥598,000
-						</p>	
-					</a>
-					<a class="content" href="https://webukatu.com/" target="_blank">
-						<h3 class="title">ウェブカツ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/webkatsu.png">
-						<p class="text">
-							アスリート部員  1ヶ月 ¥43,600 + 入会費 ¥180,000<br>
-							アスリート部員 (完全月額制)  1ヶ月 ¥70,600<br>
-							特待生部員  6ヶ月 ¥564,000
-						</p>	
-					</a>
-				</div>
-			</section>
-
-			<section class="swiper-slide">
-				<div class="top">
-					<h2 class="title">2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></h2>
-					<p class="text">
-						未経験歓迎企業へ入社し、研修制度を利用して学ぶ道もあります。<br>
-						仕事のためのスキルが確実に身につくうえに、費用もかかりません。<br>
-						ただしかなり薄給で、企業に対する悪質な噂も目立ちます。<br>
-						家電量販店などに派遣されながら、勤務後に研修を受講するスタイルが主流。<br>
-						ハイリスクですが、新卒など収入の少ない状況から挑戦するならアリかもしれません。
-					</p>
-				</div>
-				<div class="bottom">
-					<a class="content" href="https://levtech.jp/" target="_blank">
-						<h3 class="title">レバテック</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/就職/levtech.png">
-						<p class="text">
-							正社員/フリーランスに特化した<br>
-							ITエンジニア/クリエイター向けエージェンドサービス。
-						</p>
-					</a>
-					<a class="content" href="https://www.green-japan.com/" target="_blank">
-						<h3 class="title">Green</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/就職/green.png">
-						<p class="text">
-							IT/Web業界に特化した<br>
-							求人情報サイト。
-						</p>
-					</a>
-					<a class="content" href="https://www.geekly.co.jp/" target="_blank">
-						<h3 class="title">Geekly</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/就職/geekly.png">
-						<p class="text">
-							IT/Web/ゲーム業界に特化した<br>
-							転職エージェントサービス。
-						</p>
-					</a>
-				</div>
-			</section>
-
-			<section class="swiper-slide">
-				<div class="top">
-					<h2 class="title">3. WEB学習サービス</h2>
-					<p class="text">
-						最も費用対効果が高く、気軽に始められるのはWEB学習サービスです。<br>
-						各社、個性的な学習スタイルを提供してくれています。<br>
-						独学なので、モチベーションの維持が課題となることと、<br>
-						一度ハマるとなかなか先に進めなくなってしまうのが欠点です。<br>
-					</p>
-				</div>
-				<div class="bottom">
-					<a class="content" href="https://prog-8.com/" target="_blank">
-						<h3 class="title">Progate</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/サービス/progate.png">
-						<p>
-							スライド学習サービス。<br>
-							<small>スライドを読んだ後に、実際にコードを書いて学ぶスタイル。<br>
-							入門者向けで、わかりやすさ重視。<br>
-							月額 ¥980  無料範囲あり</small>
-						</p>	
-					</a>
-					<a class="content" href="https://dotinstall.com/" target="_blank">
-						<h3 class="title">ドットインストール</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/サービス/dot install.png">
-						<p>
-							動画学習サービス。<br>
-							<small>初心者向けを謳っており、利用者数が多い。<br>
-							音声の文字起こし機能、ソースコード閲覧機能などもある。<br>
-							月額 ¥980  無料範囲あり</small>
-						</p>	
-					</a>
-					<a class="content" href="https://www.nnn.ed.nico/" target="_blank">
-						<h3 class="title">N予備校</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/サービス/n yobikou.png">
-						<p>
-							テキストに沿って学ぶスタイル。<br>
-							<small>他サービスと比べ、学習内容が最も体系的。<br>
-							内容、UIともに、気軽さよりも堅実さ重視。<br>
-							クレジットカード決済で  月額 ¥1,000  無料範囲あり</small>
-						</p>	
-					</a>
-					<a class="content" href="https://schoo.jp/" target="_blank">
-						<h3 class="title">Schoo</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/サービス/schoo.png">
-						<p>
-							講義動画で学ぶスタイル。<br>
-							<small>実際に講義を受けてるような視点で学べる。<br>
-					        講義の質は、講師の質に左右されるらしい。<br>
-							WEB登録で 月額 ¥980  1年契約で2ヶ月無料</small>
-						</p>	
-					</a>
-					<a class="content" href="https://www.udemy.com/ja/" target="_blank">
-						<h3 class="title">Udemy</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/サービス/udemy.png">
-						<p>
-							買い切り方式の動画学習サービス。<br>
-					        <small>プロが作成した講義（資料）を購入できる。<br>
-					        セールで9割ほど安くなるので、そのタイミングが狙い目。<br>
-					    	講義ごと ¥1,200 ~ ¥30,000</small>
-						</p>	
-					</a>
-				</div>
-			</section>
-
-			<section class="swiper-slide">
-				<div class="top">
-					<h2 class="title">4. コミュニティ</h2>
-					<p class="text">
-						点在するエンジニア向けコミュニティを活用していく方法もあります。<br>
-						基礎から学ぶには適さないので、学習の補助的な立ち位置になりますが、<br>
-						モチベーションの維持、気軽な相談、初心者同士の意見交換にうってつけなので<br>
-						うまく活用できれば、挫折率を大幅に下げることができるでしょう。
+						プログラミング言語は、やりたいことによって使い分ける必要があります。<br>
+						このカリキュラムでは、WEBサイトやWEBアプリを作るための。<br>
+						HTML、CSS、JavaScriptという、3つの言語を勉強していきます。<br>
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<h3 class="titile">SNS</h3>
-						<a href="https://twitter.com/" target="_blank">
-							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/twitter.png">
-							<p class="text">
-								#駆け出しエンジニアと繋がりたい<br>
-								#100DaysOfCode #ウェブカツ<br>
-								などのハッシュタグや、<br>
-								@kazutaka_dev @showheyohtaki<br>
-								@momokotoyopet<br>
-								などのインフルエンサーを中心に、<br>
-								駆け出しエンジニアコミュニティが形成されている。	
-							</p>
-						</a>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html">
 					</div>
 					<div class="content">
-						<h3 class="titile">Q&A</h3>
-						<a href="https://teratail.com/" target="_blank">
-							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/teratail.png">
-							<p class="text">
-								日本のエンジニアが集うQ&Aコミュニティサイト。某Yah○○!知恵袋のエンジニア版。国産サイト。
-							</p>
-						</a>
-						<a href="https://ja.stackoverflow.com/" target="_blank">
-							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/stack-overflow.png">
-							<p class="text">
-								コンピュータや情報技術、特にプログラミング技術に関するナレッジコミュニティ。海外発のサイト。
-							</p>
-						</a>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css">
 					</div>
 					<div class="content">
-						<h3 class="titile">情報共有</h3>
-						<a href="https://qiita.com/" target="_blank">
-							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/qiita.png">
-							<p class="text">
-								プログラマのための技術情報共有サービス。技術的な事をググると十中八九Qiitaの記事がでてくる。<br>
-								初心者もQiitaアカウントを作って、学習内容をまとめておくと就職に有利などと言われている。
-							</p>
-						</a>
-					</div>
-					<div class="content">
-						<h3 class="titile">勉強会</h3>
-						<a href="https://connpass.com/" target="_blank">
-							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/connpass.png">
-							<p class="text">
-								エンジニアをつなぐIT勉強会支援プラットフォーム。 <br>
-								主にエンジニア向けの勉強会やセミナーなどのイベント開催・参加が無料で行える。
-							</p>
-						</a>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript">
 					</div>
 				</div>
 			</section>
 
-			<section class="swiper-slide">
-				<div class="top">
-					<h2 class="title">5. メンター</h2>
-					<p class="text">
-						個人的に1:1の指導を依頼する「メンター」という方法もあります。<br>
-						わざわざスクールに通わなくても、マンツーマンの指導を受けることで、<br>
-						独学にかかる労力や時間、費用などを大きく削減できるので、おすすめです。<br>
-						近頃はインターネット上で気軽にメンターを探せるサービスが充実しています。
-					</p>
-				</div>
-				<div class="bottom">
-					<a class="content" href="https://menta.work/" target="_blank">
-						<h3 class="titile">MENTA</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/メンター/menta.png"><br>
-						<p class="text">
-							メンターマッチングサービス。<br>
-							大体のメンターが単発、月額などで複数のコースを用意している。<br>
-							IT関連のメンターが大半だが、起業方法、身体を柔らかくする方法、<br>
-							あなたのイラスト褒めます、などのメンターもいる。<br>
-							相場: 単発 ¥1,000 ~ 月額 ¥15,000+α
-						</p>
-					</a>
-					<a class="content" href="https://menta.work/" target="_blank">
-						<h3 class="titile">TechMe</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/メンター/techme.png"><br>
-						<p class="text">
-							30分単位で現役のエンジニアに個別相談ができるプラットフォーム。<br>
-							MENTAと違い単発の相談がメイン。<br>
-							プログラミング初学者だけでなく、<br>
-							IT担当のいない or 少ない会社もターゲットにしている。<br>
-							相場: 30分 ¥1,500 ~ ¥6,250
-						</p>
-					</a>
-				</div>
-			</section>
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">6. ブログ・参考サイト</h2>
+					<h2 class="title">HTML</h2>
 					<p class="text">
-						これまでに紹介したどのような方法で学習をしていても、<br>
-						より詳しく or 分かりやすく理解したい場合に必ず必要になってくるのが<br>
-						プログラミングのまとめサイト・参考サイトなどです。<br>
-						わからないことがあるときに、柔軟にWEBで調べることができるかどうかが、<br>
-						エンジニアとしての才能を物語るといっても過言ではありません。<br>
-						星の数ほどある情報のなかでも、未経験者向けで有名なサイトの一部を紹介します。
+						HTMLは、WEBサイトの構造を決めるための言語です。<br>
+						文字、ボタン、入力欄などの要素の配置する順番を書きこんだり、<br>
+						要素のまとまり（このスライドでいうと水色の部分など）の範囲を決めたりしています。<br>
+						HTMLでは、WEBサイトのデザインを指定しないため、ここで配置された要素は、あらかじめ決められたデザイン通りに表示されるだけになります。
+						<br>
+						もうひとつの役割として、WEBサイトの設定（タイトルや、読み込むCSSファイルやJavaScriptファイルなど）をする部分も、HTMLで行っています。
 					</p>
 				</div>
 				<div class="bottom">
-					<a class="content" href="https://eng-entrance.com/" target="_blank">
-						<h3 class="titile">エンジニアの入り口</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/engineer.png"><br>
-						<p>
-							<small>CSS/Java/Linux/PHP/Ruby/JavaScript など</small>
-						</p>
-					</a>
-					<a class="content" href="https://www.sejuku.net/blog/" target="_blank">
-						<h3 class="titile">侍エンジニア塾ブログ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/samurai.png"><br>
-						<p>
-							<small>Ruby/Swift/Java/Python/JavaScript など</small>
-						</p>
-					</a>
-					<a class="content" href="https://www.sejuku.net/blog/" target="_blank">
-						<h3 class="titile">サルワカ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/saruwaka.png"><br>
-						<p>
-							<small>CSS/WEBデザイン/WordPress など</small>
-						</p>
-					</a>
-					<a class="content" href="https://webliker.info/" target="_blank">
-						<h3 class="titile">webliker</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/selector_cheet.png">
-						<p>
-							<small>CSSセレクタのチートシート など</small>
-						</p>
-					</a>
-					<a class="content" href="https://www.webcreatorbox.com/" target="_blank">
-						<h3 class="titile">WEBクリエイターボックス</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/flex_cheet.png">
-						<p>
-							<small>Flexboxのチートシート など</small>
-						</p>
-					</a>
-					<a class="content" href="https://linuc.org/" target="_blank">
-						<h3 class="titile">LinuC</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/linuc.png">
-						<p>
-							<small>Linux標準教科書 など</small>
-						</p>
-					</a>
-					<a class="content" href="https://www.r-staffing.co.jp/engineer/" target="_blank">
-						<h3 class="titile">IT STAFFING  エンジニアスタイル</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/it_staffing.png">
-						<p>
-							<small>スキルアップ情報 など</small>
-						</p>
-					</a>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html">
+					</div>
+					<div class="content">
+						<h3 class="title">イメージ</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html">
+					</div>
 				</div>
 			</section>
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">CSS</h2>
+					<p class="text">
+						CSSは、WEBサイトのデザインを決めるための言語です。<br>
+						HTMLで決めた構造に対して、どういうデザインを指定するかを決めます。<br>
+						背景色や文字の色、背景画像、要素の右寄せや中央寄せ、要素の間隔（余白）の指定などをはじめ、ほぼ全てのデザインをCSSで指定していきます。<br>
+						<br>
+						また最近では、マウスが合っている要素だけ色を変えるとか、<br>
+						一度アクセスしたことのあるリンクだけ文字色を変えるなど、<br>
+						ユーザーの動きに対してデザインを変えるような指定もできるようになってきました。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css">
+					</div>
+					<div class="content">
+						<h3 class="title">イメージ</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css">
+					</div>
+				</div>
+			</section>
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">JavaScript</h2>
+					<p class="text">
+						JavaScriptは、HTMLやCSSでは出来ない、いろんな機能をつくるためのプログラミング言語です。<br>
+						（ボタンをクリックしたら）テキストをコピーする。<br>
+						要素を後から追加する、要素の数をカウントして表示する。<br>
+						スライドしたら次のページを表示する。<br>
+						など、とにかく色んなことができます。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript">
+					</div>
+					<div class="content">
+						<h3 class="title">イメージ</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript">
+					</div>
+				</div>
+			</section>
+
 		</article>
 		<nav>
 			<div class="prev"></div>
@@ -405,20 +164,7 @@
 		<div class="modalWindow">
 			<h2>スライドは以上です！</h2>
 			<p>
-				挫折率をさげるためには、2~3つのコンテンツを組み合わせて学習するのがおすすめです。<br>
-				是非、自身に合った学習方法を組み合わせて、学んでください！
-			</p>
-			<p>
-				当サークルに積極的に参加していただけるだけでも、学習を継続するきっかけになり素晴らしいですが、<br>学習のサポートまでご希望の方にむけて、主催者があなたのメンターとなる、サポートプランを用意しました。
-			</p>
-				学習サイトの進め方の提案や、説明が足りない部分を補足説明させていただくだけでなく、<br>
-				サークル活動日以外のプログラミングの質問も受け付けておりますので、<br>
-				このサークル活動に参加しているだけで、スクールと同じくらい有利に学習を進めていただけると思います！<br>
-			</p>
-			<p>
-				※ 大変恐縮ですが、サポートの内容を考えたり、今回のようなスライドを作成するのに<br>
-				手間がかかってしまっているため、サポートをご希望の方からは、月額1,500円を頂戴しています。<br>
-				サポート不要のかたは、もちろん無料でサークルに参加していただけますので、是非積極的にご活用ください！
+				
 			</p>
 			<a href="https://menta.work/plan/1225" target="_blank">
 				<button type="button">学習のサポートを申し込む</button>
