sample_javascript.gifのループ回数を無限に

--- a/about-programming.html
+++ b/about-programming.html
@@ -75,13 +75,13 @@
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
 					</div>
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
 					</div>
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
 					</div>
 				</div>
 			</section>
@@ -101,11 +101,11 @@
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
 					</div>
 					<div class="content">
 						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html.png">
 					</div>
 				</div>
 			</section>
@@ -124,11 +124,11 @@
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
 					</div>
 					<div class="content">
 						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css.png">
 					</div>
 				</div>
 			</section>
@@ -145,11 +145,11 @@
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
 					</div>
 					<div class="content">
 						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript.gif">
 					</div>
 				</div>
 			</section>
