image/流れ/を追加

--- a/about-programming.html
+++ b/about-programming.html
@@ -92,20 +92,18 @@
 					<h2 class="title">HTML</h2>
 					<p class="text">
 						HTMLは、WEBサイトの構造を決めるための言語です。<br>
-						文字、ボタン、入力欄などの要素の配置する順番を書きこんだり、<br>
-						要素のまとまり（このスライドでいうと水色の部分など）の範囲を決めたりしています。<br>
-						HTMLでは、WEBサイトのデザインを指定しないため、ここで配置された要素は、あらかじめ決められたデザイン通りに表示されるだけになります。
-						<br>
-						もうひとつの役割として、WEBサイトの設定（タイトルや、読み込むCSSファイルやJavaScriptファイルなど）をする部分も、HTMLで行っています。
+						文字、ボタン、入力欄などの要素を配置する順番を書きこんだり、<br>
+						このスライドの水色の部分のように、要素の範囲を決めたりします。<br>
+						更に、WEBサイトの設定（タイトルの指定や、CSSやJavaScriptの読み込みなど）も、HTMLで行っています。
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
+						<h3 class="title">イメージ</h3>
+						<img class="sample" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html.png">
 					</div>
 					<div class="content">
-						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html.png">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
 					</div>
 				</div>
 			</section>
@@ -113,22 +111,18 @@
 				<div class="top">
 					<h2 class="title">CSS</h2>
 					<p class="text">
-						CSSは、WEBサイトのデザインを決めるための言語です。<br>
-						HTMLで決めた構造に対して、どういうデザインを指定するかを決めます。<br>
-						背景色や文字の色、背景画像、要素の右寄せや中央寄せ、要素の間隔（余白）の指定などをはじめ、ほぼ全てのデザインをCSSで指定していきます。<br>
-						<br>
-						また最近では、マウスが合っている要素だけ色を変えるとか、<br>
-						一度アクセスしたことのあるリンクだけ文字色を変えるなど、<br>
-						ユーザーの動きに対してデザインを変えるような指定もできるようになってきました。
+						CSSは、WEBサイトの見た目やデザインを決めるための言語です。<br>
+						背景や文字の色、要素の右寄せや中央寄せ、要素の間隔･余白や表示/非表示の指定をはじめ、全てのデザインはCSSで指定していきます。<br>
+						また、マウスが合っている要素の色を変えたり、アクセス済のリンクの色を変えるなど、ユーザーの動きに対して見た目を変えるような指定もできます。
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
+						<h3 class="title">イメージ</h3>
+						<img class="sample" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css.png">
 					</div>
 					<div class="content">
-						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css.png">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
 					</div>
 				</div>
 			</section>
@@ -136,24 +130,100 @@
 				<div class="top">
 					<h2 class="title">JavaScript</h2>
 					<p class="text">
-						JavaScriptは、HTMLやCSSでは出来ない、いろんな機能をつくるためのプログラミング言語です。<br>
-						（ボタンをクリックしたら）テキストをコピーする。<br>
-						要素を後から追加する、要素の数をカウントして表示する。<br>
-						スライドしたら次のページを表示する。<br>
-						など、とにかく色んなことができます。
+						JavaScriptは、HTMLやCSSでは出来ない様々な機能を作る言語です。<br>
+						ページの移動、テキストのコピー、要素の追加、数をカウントして表示するなどの様々な機能を作成したり、その機能を発動する条件やタイミングを指定するなど…。１つ１つの機能を組み合わせれば、できることは無限にあります。<br>
+						（JavaScriptを簡単に使用するためのjQueryという機能も学びます。）
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
+						<h3 class="title">イメージ</h3>
+						<img class="sample" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript.gif">
 					</div>
 					<div class="content">
-						<h3 class="title">イメージ</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript.gif">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
 					</div>
 				</div>
 			</section>
 
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">この３つは<br>プログラミング言語か？</h2>
+					<p class="text">
+						実は、この３つの中でプログラミング言語と呼ぶものはJavaScriptだけです。<br>
+						一般的にプログラミングというのは「機能」を作ることを指し、<br>
+						HTMLやCSSで出来ることは、プログラミングとは呼びません。<br>
+						HTMLはマークアップ言語、CSSはスタイルシート言語と呼ばれています。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content x">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
+					</div>
+					<div class="content x">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
+					</div>
+					<div class="content o">
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
+					</div>
+				</div>
+			</section>
+
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。</h2>
+					<p class="text">
+						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているWEBページが作れるようになります。<br>
+						まずは、最初のゴールとして意識してみてください。<br>
+						サーバーが必要な機能を作りたい場合は、<br>
+						この後にサーバーサイドのプログラミング言語(PHP、Ruby、Pythonなど)を学んでいきましょう。<br>
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/php.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Ruby.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Python.png">
+					</div>
+				</div>
+			</section>
+
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">サーバーとは (1)</h2>
+					<p class="text">
+						WEBでは、どんな流れでパソコンにWEBページを表示しているでしょうか？<br>
+						実は、メールで相手から画像を送ってもらう時の流れとほとんど同じです。<br>
+						・自分: 相手のメールアドレスに「画像を送ってください」と送信する。<br>
+						・相手: パソコンに入っている画像をメールに添付して返信する。<br>
+						・自分: メールに添付された画像をダブルクリックして開く。<br>
+						というのがメールの流れになりますが、<br>
+						ここでメールアドレスのかわりにURLを使い、<br>
+						添付するファイルがHTML、CSS、JavaScriptのテキストになり、<br>
+						ファイルを開く手間を自動化したものが、WEBサイトです。<br>
+						<small>
+							※ URL … 「http://」 から始まるホームページのアドレスのこと。<br>
+						</small>
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/server.png">
+					</div>
+					<div class="arrow">-</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/file.png">
+					</div>
+					<div class="arrow">→</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/pc.png">
+					</div>
+				</div>
+			</section>
 		</article>
 		<nav>
 			<div class="prev"></div>
