image/流れ/を追加

--- a/about-programming.html
+++ b/about-programming.html
@@ -21,7 +21,11 @@
 					<br>
 					これから説明することの中で、意味がよくわからない文章や単語、<br>
 					また気になる事などがあった時は、なるべくGoogleで検索したり、質問したりして、<br>
-					頭をスッキリさせてから進めるようにしてみてください！
+					頭をスッキリさせてから進めるようにしてみてください！<br>
+					<br>
+					また、今の部分では完全に理解できない部分もあるかと思うので、<br>
+					もうすこし学習が進んだとき、再びこのスライドの内容について復習すると、<br>
+					より深く理解できると思います。
 				</p>
 			</section>
 
@@ -171,12 +175,14 @@
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。</h2>
+					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。(1)</h2>
 					<p class="text">
-						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているWEBページが作れるようになります。<br>
-						まずは、最初のゴールとして意識してみてください。<br>
+						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているページが作れるようになります。<br>
+						このカリキュラムでは、まずはそこを最初のゴールに設定しています。<br>
+						<br>
 						サーバーが必要な機能を作りたい場合は、<br>
 						この後にサーバーサイドのプログラミング言語(PHP、Ruby、Pythonなど)を学んでいきましょう。<br>
+						せっかくなので、次のページで、サーバーや、サーバーが必要な機能について簡単に説明します。
 					</p>
 				</div>
 				<div class="bottom">
@@ -239,7 +245,10 @@
 							サーバーが送らなかったファイルは<br>
 							あなたのPCから表示することはできないので、<br>
 							サーバーは個人情報やパスワード、<br>
-							見せたくないファイルなどを守ることができます。
+							見せたくないファイルなどを守ることができます。<br>
+							<br>
+							JavaScriptではすべてローカルにデータがある状態なので、<br>
+							隠したい情報も、暴こうとすれば、暴けてしまいます。
 						</small>
 					</div>
 					<div class="content">
@@ -254,7 +263,8 @@
 						</p>
 						<small>
 							WEBサイトのデータというのは、<br>
-							3つの言語が書かれたテキストファイルや、<br>
+							HTML、CSS、JavaScriptなどの言語が<br>
+							書かれたテキストファイルや、<br>
 							サイトに表示する画像ファイルなどの事です。
 						</small>
 					</div>
@@ -280,50 +290,78 @@
 					<h2 class="title">サーバーとは (2)</h2>
 					<p class="text">
 						スマホにアプリをインストールするのと同じように、<br>
-						PCに、サーバーとして利用するための機能をインストールすることで、<br>
-						そのPCはサーバーになります。<br>
-						また、その他にも様々な機能を導入することができます。<br>
-						サーバーの代表的な役割が以下の３つになります。
+						PCをサーバーにするための機能をインストールすれば、<br>
+						そのPCをサーバーとして使用することができます。<br>
+						<br>
+						他にも様々な機能をインストールすることができますが。<br>
+						サーバーでよく使用される、代表的な役割は以下の３つになります。
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
-						<h3 class="title">サーバーの主な役割</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/cloud.png">
-						<p class="text">
-							スマホにアプリをインストールするのと同じように<br>
-							PCにサーバーの機能を導入することで、<br>
-							リクエストしてきたユーザーのPCに対して<br>
-							任意のファイルを送ることが出来ます。<br>
+						<h3 class="title">WEBサーバー</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/cloud.png">
+						<small class="text">
+							リクエストを送ってきたユーザーのPCに対して<br>
+							任意のファイルを返送することが出来ます。<br>
+							<br>
 							個人情報やパスワードなど、機能として必要だけど<br>
-							他の人に見せたくないデータは、送らないようにしておくことで<br>
-							守ることができます。
-						</p>
+							他の人に見せたくないようなデータは逆に、<br>
+							送らないようにしておくこともできるので、<br>
+							大事なデータを守りながら扱うことができます。
+						</small>
 					</div>
 					<div class="content">
 						<h3 class="title">データの共有</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/share.png">
-						<p class="text">
-							ユーザーが入力･送信したデータをサーバーに保存し<br>
-							保存したデータを他のユーザーに送ることで、<br>
-							サーバーにアクセスしてきた沢山のユーザーと<br>
-							データを共有することができます。<br>
-							オンラインゲームや、掲示板、チャットなどで<br>
-							使われている仕組みです。
-						</p>
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/share.png">
+						<small class="text">
+							オンラインゲームや、SNS、チャットなどのように<br>
+							ユーザーが入力･送信したデータを他の人と共有したい場合、<br>
+							1. 入力･送信されたデータをサーバーに保存する<br>
+							2. 保存したデータを表示するファイルをユーザーに返す<br>
+							という流れで、データの共有をすることができます。<br>
+							<br>
+							リアルタイム通信などのように、<br>
+							ユーザーのリクエスト（= URLの入力）を待たずに<br>
+							データを共有するための機能もインストールできます。<br>
+						</small>
 					</div>
 					<div class="content">
 						<h3 class="title">データベース</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/db.png">
-						<p class="text">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/db.png">
+						<small class="text">
 							ユーザーひとりひとりの情報を扱う場合、<br>
-							とても膨大な数の情報を扱うことになりますが、<br>
-							その情報を取り出すのに時間をかけるわけにはいきません。<br>
-							膨大な情報から、特定の条件に合致する情報を素早く取り出すために<br>
-							データーベースという機能があります。<br>
+							ユーザーの数が増えれば増えるほど、<br>
+							情報の数が膨大になります。<br>
+							<br>
+							情報を素早く簡単に管理したり、検索するために、<br>
+							データーベースという機能が作られました。<br>
 							通常、ユーザーの個人情報や、パスワードなどの情報は、<br>
-							このデータベースに格納されている事がほとんどです。
-						</p>
+							このデータベースに格納して管理します。
+						</small>
+					</div>
+				</div>
+			</section>
+
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。(2)</h2>
+					<p class="text">
+						まとめると、サーバーが必要な機能というのは、<br>
+						データの共有が必要な機能や、大量の情報を管理する必要がある機能のことです。<br>
+						そのような機能が必要な仕組みも作れるようになりたい場合は、この学習の後に、<br>サーバーサイドのプログラミング言語(PHP、Ruby、Pythonなど)を学んでいきましょう。<br>
+						<br>
+						ちなみに、今回の学習で作ったものはインターネットに公開出来ないのか？<br>
+						と疑問を持った人もいるかもしれませんが、サーバーの知識がなくても、<br>かわりにインターネットに公開してくれるサービスが沢山あり、<br>
+						ひとまず外部からアクセス可能な状態にすることはできますので、安心してください。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/online.png">
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/table.png">
 					</div>
 				</div>
 			</section>
